codeb/grammar.output
Terminals unused in grammar

   LEXER_ERROR


Grammar

    0 $accept: yyyAugNonterm $end

    1 $@1: %empty

    2 yyyAugNonterm: $@1 program

    3 program: program ID BRACEL parameterDef BRACER stats END SEMIC
    4        | %empty

    5 maybeid: ID
    6        | %empty

    7 preexpr: NOT preexpr
    8        | MINUS preexpr
    9        | term

   10 lexpr: ID
   11      | term CIRCUMFLEX

   12 parameterDef: ID COMMA parameterDef
   13             | ID
   14             | %empty

   15 term: BRACEL expr BRACER
   16     | NUMBER
   17     | funcCall
   18     | ID

   19 guarded: expr ARROWR stats CONTINUE maybeid
   20        | expr ARROWR stats BREAK maybeid

   21 dostat: ID COLON DO guardedlist END
   22       | DO guardedlist END

   23 funcCall: ID BRACEL arguments BRACER

   24 guardedlist: guarded SEMIC guardedlist
   25            | %empty

   26 multexpr: term STAR multexpr
   27         | term

   28 orexpr: term OR orexpr
   29       | term

   30 expr: preexpr
   31     | term CIRCUMFLEX
   32     | term PLUS plusexpr
   33     | term STAR multexpr
   34     | term OR orexpr
   35     | term LESS term
   36     | term EQUAL term

   37 plusexpr: term PLUS plusexpr
   38         | term

   39 stat: RETURN expr
   40     | dostat
   41     | VAR ID ASSIGN expr
   42     | lexpr ASSIGN expr
   43     | term

   44 stats: stat SEMIC stats
   45      | %empty

   46 arguments: expr
   47          | expr COMMA arguments
   48          | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
STAR (258) 26 33
NUMBER (259) 16
DO (260) 21 22
NOT (261) 7
LEXER_ERROR (262)
MINUS (263) 8
ID (264) 3 5 10 12 13 18 21 23 41
BREAK (265) 20
COLON (266) 21
ARROWR (267) 19 20
BRACEL (268) 3 15 23
CONTINUE (269) 19
COMMA (270) 12 47
EQUAL (271) 36
BRACER (272) 3 15 23
OR (273) 28 34
LESS (274) 35
RETURN (275) 39
ASSIGN (276) 41 42
PLUS (277) 32 37
VAR (278) 41
SEMIC (279) 3 24 44
END (280) 3 21 22
CIRCUMFLEX (281) 11 31


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
yyyAugNonterm (28)
    on left: 2, on right: 0
$@1 (29)
    on left: 1, on right: 2
program (30)
    on left: 3 4, on right: 2 3
maybeid (31)
    on left: 5 6, on right: 19 20
preexpr (32)
    on left: 7 8 9, on right: 7 8 30
lexpr (33)
    on left: 10 11, on right: 42
parameterDef (34)
    on left: 12 13 14, on right: 3 12
term (35)
    on left: 15 16 17 18, on right: 9 11 26 27 28 29 31 32 33 34 35
    36 37 38 43
guarded (36)
    on left: 19 20, on right: 24
dostat (37)
    on left: 21 22, on right: 40
funcCall (38)
    on left: 23, on right: 17
guardedlist (39)
    on left: 24 25, on right: 21 22 24
multexpr (40)
    on left: 26 27, on right: 26 33
orexpr (41)
    on left: 28 29, on right: 28 34
expr (42)
    on left: 30 31 32 33 34 35 36, on right: 15 19 20 39 41 42 46 47
plusexpr (43)
    on left: 37 38, on right: 32 37
stat (44)
    on left: 39 40 41 42 43, on right: 44
stats (45)
    on left: 44 45, on right: 3 19 20 44
arguments (46)
    on left: 46 47 48, on right: 23 47


State 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 1 ($@1)

    yyyAugNonterm  go to state 1
    $@1            go to state 2


State 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 3


State 2

    2 yyyAugNonterm: $@1 . program

    $default  reduce using rule 4 (program)

    program  go to state 4


State 3

    0 $accept: yyyAugNonterm $end .

    $default  accept


State 4

    2 yyyAugNonterm: $@1 program .
    3 program: program . ID BRACEL parameterDef BRACER stats END SEMIC

    ID  shift, and go to state 5

    $default  reduce using rule 2 (yyyAugNonterm)


State 5

    3 program: program ID . BRACEL parameterDef BRACER stats END SEMIC

    BRACEL  shift, and go to state 6


State 6

    3 program: program ID BRACEL . parameterDef BRACER stats END SEMIC

    ID  shift, and go to state 7

    $default  reduce using rule 14 (parameterDef)

    parameterDef  go to state 8


State 7

   12 parameterDef: ID . COMMA parameterDef
   13             | ID .

    COMMA  shift, and go to state 9

    $default  reduce using rule 13 (parameterDef)


State 8

    3 program: program ID BRACEL parameterDef . BRACER stats END SEMIC

    BRACER  shift, and go to state 10


State 9

   12 parameterDef: ID COMMA . parameterDef

    ID  shift, and go to state 7

    $default  reduce using rule 14 (parameterDef)

    parameterDef  go to state 11


State 10

    3 program: program ID BRACEL parameterDef BRACER . stats END SEMIC

    NUMBER  shift, and go to state 12
    DO      shift, and go to state 13
    ID      shift, and go to state 14
    BRACEL  shift, and go to state 15
    RETURN  shift, and go to state 16
    VAR     shift, and go to state 17

    $default  reduce using rule 45 (stats)

    lexpr     go to state 18
    term      go to state 19
    dostat    go to state 20
    funcCall  go to state 21
    stat      go to state 22
    stats     go to state 23


State 11

   12 parameterDef: ID COMMA parameterDef .

    $default  reduce using rule 12 (parameterDef)


State 12

   16 term: NUMBER .

    $default  reduce using rule 16 (term)


State 13

   22 dostat: DO . guardedlist END

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    $default  reduce using rule 25 (guardedlist)

    preexpr      go to state 27
    term         go to state 28
    guarded      go to state 29
    funcCall     go to state 21
    guardedlist  go to state 30
    expr         go to state 31


State 14

   10 lexpr: ID .
   18 term: ID .
   21 dostat: ID . COLON DO guardedlist END
   23 funcCall: ID . BRACEL arguments BRACER

    COLON   shift, and go to state 32
    BRACEL  shift, and go to state 33

    ASSIGN    reduce using rule 10 (lexpr)
    $default  reduce using rule 18 (term)


State 15

   15 term: BRACEL . expr BRACER

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    preexpr   go to state 27
    term      go to state 28
    funcCall  go to state 21
    expr      go to state 34


State 16

   39 stat: RETURN . expr

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    preexpr   go to state 27
    term      go to state 28
    funcCall  go to state 21
    expr      go to state 35


State 17

   41 stat: VAR . ID ASSIGN expr

    ID  shift, and go to state 36


State 18

   42 stat: lexpr . ASSIGN expr

    ASSIGN  shift, and go to state 37


State 19

   11 lexpr: term . CIRCUMFLEX
   43 stat: term .

    CIRCUMFLEX  shift, and go to state 38

    $default  reduce using rule 43 (stat)


State 20

   40 stat: dostat .

    $default  reduce using rule 40 (stat)


State 21

   17 term: funcCall .

    $default  reduce using rule 17 (term)


State 22

   44 stats: stat . SEMIC stats

    SEMIC  shift, and go to state 39


State 23

    3 program: program ID BRACEL parameterDef BRACER stats . END SEMIC

    END  shift, and go to state 40


State 24

    7 preexpr: NOT . preexpr

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    preexpr   go to state 41
    term      go to state 42
    funcCall  go to state 21


State 25

    8 preexpr: MINUS . preexpr

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    preexpr   go to state 43
    term      go to state 42
    funcCall  go to state 21


State 26

   18 term: ID .
   23 funcCall: ID . BRACEL arguments BRACER

    BRACEL  shift, and go to state 33

    $default  reduce using rule 18 (term)


State 27

   30 expr: preexpr .

    $default  reduce using rule 30 (expr)


State 28

    9 preexpr: term .
   31 expr: term . CIRCUMFLEX
   32     | term . PLUS plusexpr
   33     | term . STAR multexpr
   34     | term . OR orexpr
   35     | term . LESS term
   36     | term . EQUAL term

    STAR        shift, and go to state 44
    EQUAL       shift, and go to state 45
    OR          shift, and go to state 46
    LESS        shift, and go to state 47
    PLUS        shift, and go to state 48
    CIRCUMFLEX  shift, and go to state 49

    $default  reduce using rule 9 (preexpr)


State 29

   24 guardedlist: guarded . SEMIC guardedlist

    SEMIC  shift, and go to state 50


State 30

   22 dostat: DO guardedlist . END

    END  shift, and go to state 51


State 31

   19 guarded: expr . ARROWR stats CONTINUE maybeid
   20        | expr . ARROWR stats BREAK maybeid

    ARROWR  shift, and go to state 52


State 32

   21 dostat: ID COLON . DO guardedlist END

    DO  shift, and go to state 53


State 33

   23 funcCall: ID BRACEL . arguments BRACER

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    $default  reduce using rule 48 (arguments)

    preexpr    go to state 27
    term       go to state 28
    funcCall   go to state 21
    expr       go to state 54
    arguments  go to state 55


State 34

   15 term: BRACEL expr . BRACER

    BRACER  shift, and go to state 56


State 35

   39 stat: RETURN expr .

    $default  reduce using rule 39 (stat)


State 36

   41 stat: VAR ID . ASSIGN expr

    ASSIGN  shift, and go to state 57


State 37

   42 stat: lexpr ASSIGN . expr

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    preexpr   go to state 27
    term      go to state 28
    funcCall  go to state 21
    expr      go to state 58


State 38

   11 lexpr: term CIRCUMFLEX .

    $default  reduce using rule 11 (lexpr)


State 39

   44 stats: stat SEMIC . stats

    NUMBER  shift, and go to state 12
    DO      shift, and go to state 13
    ID      shift, and go to state 14
    BRACEL  shift, and go to state 15
    RETURN  shift, and go to state 16
    VAR     shift, and go to state 17

    $default  reduce using rule 45 (stats)

    lexpr     go to state 18
    term      go to state 19
    dostat    go to state 20
    funcCall  go to state 21
    stat      go to state 22
    stats     go to state 59


State 40

    3 program: program ID BRACEL parameterDef BRACER stats END . SEMIC

    SEMIC  shift, and go to state 60


State 41

    7 preexpr: NOT preexpr .

    $default  reduce using rule 7 (preexpr)


State 42

    9 preexpr: term .

    $default  reduce using rule 9 (preexpr)


State 43

    8 preexpr: MINUS preexpr .

    $default  reduce using rule 8 (preexpr)


State 44

   33 expr: term STAR . multexpr

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 61
    funcCall  go to state 21
    multexpr  go to state 62


State 45

   36 expr: term EQUAL . term

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 63
    funcCall  go to state 21


State 46

   34 expr: term OR . orexpr

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 64
    funcCall  go to state 21
    orexpr    go to state 65


State 47

   35 expr: term LESS . term

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 66
    funcCall  go to state 21


State 48

   32 expr: term PLUS . plusexpr

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 67
    funcCall  go to state 21
    plusexpr  go to state 68


State 49

   31 expr: term CIRCUMFLEX .

    $default  reduce using rule 31 (expr)


State 50

   24 guardedlist: guarded SEMIC . guardedlist

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    $default  reduce using rule 25 (guardedlist)

    preexpr      go to state 27
    term         go to state 28
    guarded      go to state 29
    funcCall     go to state 21
    guardedlist  go to state 69
    expr         go to state 31


State 51

   22 dostat: DO guardedlist END .

    $default  reduce using rule 22 (dostat)


State 52

   19 guarded: expr ARROWR . stats CONTINUE maybeid
   20        | expr ARROWR . stats BREAK maybeid

    NUMBER  shift, and go to state 12
    DO      shift, and go to state 13
    ID      shift, and go to state 14
    BRACEL  shift, and go to state 15
    RETURN  shift, and go to state 16
    VAR     shift, and go to state 17

    $default  reduce using rule 45 (stats)

    lexpr     go to state 18
    term      go to state 19
    dostat    go to state 20
    funcCall  go to state 21
    stat      go to state 22
    stats     go to state 70


State 53

   21 dostat: ID COLON DO . guardedlist END

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    $default  reduce using rule 25 (guardedlist)

    preexpr      go to state 27
    term         go to state 28
    guarded      go to state 29
    funcCall     go to state 21
    guardedlist  go to state 71
    expr         go to state 31


State 54

   46 arguments: expr .
   47          | expr . COMMA arguments

    COMMA  shift, and go to state 72

    $default  reduce using rule 46 (arguments)


State 55

   23 funcCall: ID BRACEL arguments . BRACER

    BRACER  shift, and go to state 73


State 56

   15 term: BRACEL expr BRACER .

    $default  reduce using rule 15 (term)


State 57

   41 stat: VAR ID ASSIGN . expr

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    preexpr   go to state 27
    term      go to state 28
    funcCall  go to state 21
    expr      go to state 74


State 58

   42 stat: lexpr ASSIGN expr .

    $default  reduce using rule 42 (stat)


State 59

   44 stats: stat SEMIC stats .

    $default  reduce using rule 44 (stats)


State 60

    3 program: program ID BRACEL parameterDef BRACER stats END SEMIC .

    $default  reduce using rule 3 (program)


State 61

   26 multexpr: term . STAR multexpr
   27         | term .

    STAR  shift, and go to state 75

    $default  reduce using rule 27 (multexpr)


State 62

   33 expr: term STAR multexpr .

    $default  reduce using rule 33 (expr)


State 63

   36 expr: term EQUAL term .

    $default  reduce using rule 36 (expr)


State 64

   28 orexpr: term . OR orexpr
   29       | term .

    OR  shift, and go to state 76

    $default  reduce using rule 29 (orexpr)


State 65

   34 expr: term OR orexpr .

    $default  reduce using rule 34 (expr)


State 66

   35 expr: term LESS term .

    $default  reduce using rule 35 (expr)


State 67

   37 plusexpr: term . PLUS plusexpr
   38         | term .

    PLUS  shift, and go to state 77

    $default  reduce using rule 38 (plusexpr)


State 68

   32 expr: term PLUS plusexpr .

    $default  reduce using rule 32 (expr)


State 69

   24 guardedlist: guarded SEMIC guardedlist .

    $default  reduce using rule 24 (guardedlist)


State 70

   19 guarded: expr ARROWR stats . CONTINUE maybeid
   20        | expr ARROWR stats . BREAK maybeid

    BREAK     shift, and go to state 78
    CONTINUE  shift, and go to state 79


State 71

   21 dostat: ID COLON DO guardedlist . END

    END  shift, and go to state 80


State 72

   47 arguments: expr COMMA . arguments

    NUMBER  shift, and go to state 12
    NOT     shift, and go to state 24
    MINUS   shift, and go to state 25
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    $default  reduce using rule 48 (arguments)

    preexpr    go to state 27
    term       go to state 28
    funcCall   go to state 21
    expr       go to state 54
    arguments  go to state 81


State 73

   23 funcCall: ID BRACEL arguments BRACER .

    $default  reduce using rule 23 (funcCall)


State 74

   41 stat: VAR ID ASSIGN expr .

    $default  reduce using rule 41 (stat)


State 75

   26 multexpr: term STAR . multexpr

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 61
    funcCall  go to state 21
    multexpr  go to state 82


State 76

   28 orexpr: term OR . orexpr

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 64
    funcCall  go to state 21
    orexpr    go to state 83


State 77

   37 plusexpr: term PLUS . plusexpr

    NUMBER  shift, and go to state 12
    ID      shift, and go to state 26
    BRACEL  shift, and go to state 15

    term      go to state 67
    funcCall  go to state 21
    plusexpr  go to state 84


State 78

   20 guarded: expr ARROWR stats BREAK . maybeid

    ID  shift, and go to state 85

    $default  reduce using rule 6 (maybeid)

    maybeid  go to state 86


State 79

   19 guarded: expr ARROWR stats CONTINUE . maybeid

    ID  shift, and go to state 85

    $default  reduce using rule 6 (maybeid)

    maybeid  go to state 87


State 80

   21 dostat: ID COLON DO guardedlist END .

    $default  reduce using rule 21 (dostat)


State 81

   47 arguments: expr COMMA arguments .

    $default  reduce using rule 47 (arguments)


State 82

   26 multexpr: term STAR multexpr .

    $default  reduce using rule 26 (multexpr)


State 83

   28 orexpr: term OR orexpr .

    $default  reduce using rule 28 (orexpr)


State 84

   37 plusexpr: term PLUS plusexpr .

    $default  reduce using rule 37 (plusexpr)


State 85

    5 maybeid: ID .

    $default  reduce using rule 5 (maybeid)


State 86

   20 guarded: expr ARROWR stats BREAK maybeid .

    $default  reduce using rule 20 (guarded)


State 87

   19 guarded: expr ARROWR stats CONTINUE maybeid .

    $default  reduce using rule 19 (guarded)
